Deploy Stretch Education Phonics App
- Implemented persistent school data management with Firebase fallback
- Added refined tutor details modal with modern UI
- Created comprehensive admin dashboard with school management
- Added AI tutor agent functionality
- Implemented school analytics and enhanced system features
- Fixed Firebase permissions and authentication issues
- Configured for Firebase Hosting deployment
- Updated school name from Harmony to Cater Primary School
- Added real-time data synchronization capabilities

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clear-fake-data": "node scripts/clear-fake-data.js",
+    "seed-tutors": "node scripts/seed-tutors.js"
   },
   "dependencies": {
-    "@next/swc-darwin-x64": "^15.3.3",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -21,19 +24,23 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "chart.js": "^4.4.9",
     "chartjs-node-canvas": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.9.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.3",
+    "react-to-print": "^3.1.1",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
